--- a/assets/css/admin/custom.css
+++ b/assets/css/admin/custom.css
@@ -132,10 +132,6 @@ div.search_result {
     color: #f1bd6c
 }
 
-.easydocs-settings .header-notify-icon img {
-    margin-top: 10px;
-    margin-left: 10px;
-}
 
 .settings-pro-icon {
     position: absolute;
