--- a/assets/scss/admin-global.scss
+++ b/assets/scss/admin-global.scss
@@ -389,11 +389,6 @@ h2#swal2-title {
   background: #ffffbe;
 }
 
-.header-notify-icon .notify-icon {
-  padding-top: 10px;
-  margin: auto;
-}
-
 /** ONE PAGE CSS **/
 body.post-type-onepage-docs .wrap .page-title-action:not(.add-onepage),
 #adminmenu #toplevel_page_eazydocs ul li a:empty {
