--- a/assets/scss/admin/layout/_header.scss
+++ b/assets/scss/admin/layout/_header.scss
@@ -8,9 +8,8 @@
   .easydocs-row {
     @include margin(mx, 0);
   }
-
-  .row {
-    &.ml-0 {
+  .row{
+    &.ml-0{
       margin-left: 0;
     }
   }
@@ -58,9 +57,18 @@
     background: rgba(#252733, 0.05);
     text-align: center;
     cursor: pointer;
-
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    color: #747474;
+    text-decoration: none;
     &:hover {
       background: #cdcdcd;
+    }
+
+    a{
+      color: #747474;
+      line-height: 1;
     }
 
     svg {
@@ -85,25 +93,15 @@
       display: inline-block;
     }
   }
-
+  
   .header-notify-icon {
-    &.ezd-trashicon {
+    &.ezd-trashicon{
       position: relative;
-
-      a {
-        color: #747474;
-        padding-top: 10px;
-        display: block;
-        text-decoration: none;
-      }
-
-      .easydocs-badge {
-        background: #333;
-        color: #fff;
-      }
+        .easydocs-badge {
+          background: #333;
+          color: #fff;
+        }
     }
-
-    cursor: auto;
   }
 }
 
@@ -226,13 +224,15 @@
 
     .easydocs-btn {
       --notification-icon: var(--clr-dark);
-      padding: 5px 10px;
+      --btn-px: 1rem;
+      --btn-fs: var(--fs-14);
+      --btn-py: 0.4rem;
       display: flex;
       align-items: center;
-      justify-content: center;
       gap: 1px;
-      background: #e4e6eb;
-      color: var(--clr-dark);
+      --btn-bg: #e4e6eb;
+      --btn-clr: var(--clr-dark);
+      --btn-bc: transparent;
       font-size: 12px;
 
       span.dashicons {
@@ -344,7 +344,6 @@
     padding-right: 0.5rem;
     margin: 0;
     line-height: 1.3;
-
     a {
       text-decoration: none;
     }
